push screech, default to a release build

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,16 @@
     <title>My Rust + Webpack project!</title>
   </head>
   <body>
+    <button id="start">start screech!</button>
+
+    <br>
+    <br>
+
+    <div>
+	<button id="saw">saw</button>
+	<button id="square">square</button>
+	<button id="triangle">triangle</button>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
