move audio buffer logic to rust

--- a/static/index.html
+++ b/static/index.html
@@ -2,19 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Rust + Webpack project!</title>
+    <title>SIM</title>
   </head>
   <body>
-    <button id="start">start screech!</button>
-
-    <br>
-    <br>
-
-    <div>
-	<button id="saw">saw</button>
-	<button id="square">square</button>
-	<button id="triangle">triangle</button>
-    </div>
+    <canvas width="20" height="60" id="ui"></canvas>
+    <button id="start">start</button>
     <script src="index.js"></script>
   </body>
 </html>
