add animation frame callback

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,14 @@
     <title>SIM</title>
   </head>
   <body>
-    <canvas width="20" height="60" id="ui"></canvas>
+    <style>
+      canvas {
+	  border: 1px solid black;
+	  width: 100%;
+	  height: 100%;
+      }
+    </style>
+    <canvas id="ui"></canvas>
     <button id="start">start</button>
     <script src="index.js"></script>
   </body>
