--- a/static/index.html
+++ b/static/index.html
@@ -7,8 +7,9 @@
   <body>
     <style>
       canvas {
-	  border: 1px solid black;
-	  width: 100%;
+        border: 1px solid black;
+        width: 1280px;
+        height: 720px;
       }
     </style>
     <canvas id="ui"></canvas>
