--- a/web-client/index.html
+++ b/web-client/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root">
+      <canvas id="viewport" width="400" height="400"></canvas>
       <button id="start">start sim</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
